# ebook-generator

./: .editorconfig  .gitignore  LICENSE.txt  README.md  pyproject.toml
epub-template/: chapter-template.xhtml  metadata.opf  page-copyright.xhtml  page-cover.xhtml  page-title.xhtml  page-toc.xhtml  toc.ncx
epub-template/styles/: style.css
inputs/: content.example.html  metadata.example.yaml
src/: generate_ebook.py
